--- a/BlazorView/Pages/Components/ShowLocations.razor
+++ b/BlazorView/Pages/Components/ShowLocations.razor
@@ -22,7 +22,7 @@
             <p>Lokasjoner lagt til:</p>
             @foreach (var item in locations)
             {
-                @if (prefferedLocations.Any(i => i.LocationId == item.Id))
+                @if (loggedInUserPrefferedLocations.Any(i => i.LocationId == item.Id))
                 {
                     <p>@item.Municipality</p>
 
@@ -33,8 +33,6 @@
     [Parameter]
     public EventCallback<bool> showLocations { get; set; }
 
-    [CascadingParameter]
-    public LoggedInUserService? loggedInUser { get; set; }
 
     private class LocationModel
     {
@@ -51,6 +49,7 @@
     // List of municipalities marked as favorable
     string? preferredLocationsFromDb;
     IEnumerable<PreferredLocation> prefferedLocations = new List<PreferredLocation>();
+    List<PreferredLocation> loggedInUserPrefferedLocations = new List<PreferredLocation>();
 
     protected override async Task OnInitializedAsync()
     {
@@ -62,13 +61,21 @@
         // Fetch list of preferred municipalities in Norway from db
         preferredLocationsFromDb = await LocationService.FetchPreferredLocations();
         prefferedLocations = JsonConvert.DeserializeObject<IEnumerable<PreferredLocation>>(preferredLocationsFromDb);
+
+        foreach (var item in prefferedLocations)
+        {
+            if (item.UserId == LoggedInUserService.Id)
+            {
+                loggedInUserPrefferedLocations.Add(item);
+            }
+        }
     }
 
     private async void selectLocation()
     {
 
         PreferredLocation preferredLocation = new();
-        preferredLocation.UserId = loggedInUser.Id;
+        preferredLocation.UserId = LoggedInUserService.Id;
         preferredLocation.LocationId = selectedLocation;
 
         LocationService.PostPreferredLocation(preferredLocation);
