--- a/BlazorView/Shared/MainLayout.razor
+++ b/BlazorView/Shared/MainLayout.razor
@@ -5,7 +5,6 @@
 
 @inject FetchUserFromDb UserListingService
 
-<CascadingValue Value="@loggedInUser">
     <PageTitle>BlazorView</PageTitle>
     <div class="page">
         <div class="sidebar">
@@ -21,10 +20,8 @@
             <MainFooter />
         </div>
     </div>
-</CascadingValue>
 
 @code{
-    private LoggedInUserService loggedInUser = new LoggedInUserService();
 
     //Interests
     string? interestsFromDb;
@@ -53,40 +50,49 @@
             newUser.Name = "Bruker";
             UserListingService.PostUser(newUser);
 
-            loggedInUser.Name = newUser.Name;
+            LoggedInUserService.Name = newUser.Name;
         }
 
-        if (loggedInUser.Name == null)
+        if (LoggedInUserService.Name == null)
         {
-            loggedInUser.Name = users.First().Name;
-            loggedInUser.Id = users.First().Id;
+            LoggedInUserService.Name = users.First().Name;
+            LoggedInUserService.Id = users.First().Id;
         }
 
         // Interests
         interestsFromDb = await UserListingService.FetchInterest();
         interests = JsonConvert.DeserializeObject<IEnumerable<Interest>>(interestsFromDb);
 
+        @if (LoggedInUserService.interests != null)
+            {
+                LoggedInUserService.interests.Clear();
+            }
+
         foreach (var item in interests)
         {
-            if (item.userGuid == loggedInUser.Id)
+            if (item.userGuid == LoggedInUserService.Id)
             {
                 commonInterests.Add(item.advertisementUuid);
             }
         }
-        loggedInUser.interests = commonInterests;
+        LoggedInUserService.interests = commonInterests;
 
         // Uninterests
         uninterestsFromDb = await UserListingService.FetchUninterest();
         uninterests = JsonConvert.DeserializeObject<IEnumerable<Interest>>(uninterestsFromDb);
 
+        if (LoggedInUserService.uninterests != null)
+        {
+            LoggedInUserService.uninterests.Clear();
+        }
         foreach (var item in uninterests)
         {
-            if (item.userGuid == loggedInUser.Id)
+            if (item.userGuid == LoggedInUserService.Id)
             {
                 commonUninterests.Add(item.advertisementUuid);
             }
         }
-        loggedInUser.uninterests = commonUninterests;
+        LoggedInUserService.uninterests = commonUninterests;
 
     }
 }
