--- a/BlazorView/Pages/Components/DisplayListing.razor.css
+++ b/BlazorView/Pages/Components/DisplayListing.razor.css
@@ -3,10 +3,12 @@
     margin-bottom: 2%;
 }
 
-.listing h5 {
-    border-bottom-style: dashed;
-    font-weight:800;
-    font-size: x-large;
-    margin: 2%;
-    width:fit-content;
-}
+    .listing .listingTitle {
+        font-weight: 800;
+        font-size: x-large;
+        margin: 2%;
+        width: fit-content;
+        background-color: #00989e;
+        text-decoration: none;
+        border: none;
+    }
