--- a/BlazorView/Pages/Components/FetchListings.razor
+++ b/BlazorView/Pages/Components/FetchListings.razor
@@ -18,7 +18,7 @@
               item.Employer.ToUpper().Contains(searchValue) || item.EngagementType.ToUpper().Contains(searchValue) ||
               item.Municipal.ToUpper().Contains(searchValue))
             {
-                <DisplayListing item="item" />
+                <DisplayListing item="item" showFullAdvertisement="@showFullAdvertisement" />
             }
         }
 
@@ -45,6 +45,8 @@ else
     [Parameter]
     public EventCallback<Advertisement> advertisementToShow { get; set; }
 
+    [Parameter]
+    public bool showFullAdvertisement { get; set; }
     /// <summary>
     /// Fetch job listings from database
     /// </summary>
